--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,9 +98,7 @@ jobs:
       #  -DCMAKE_INSTALL_PREFIX=/home/runner/.local
       run: cd /tmp/wolfssl/;
            whoami;
-           
-           sudo mkdir -p /usr/local/share/doc/wolfssl;
-           sudo chown -R runner /usr/local/share/doc;
+           sudo chown -R runner /usr/local/;
            ./autogen.sh;
            ./configure;
            make;
