--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,6 +99,7 @@ jobs:
       run: cd /tmp/wolfssl/;
            sudo mkdir -p /usr/local/share/doc/wolfssl;
            sudo chown -R runner /usr/local/share/doc/wolfssl;
+           sudo chown -R runner /usr/local/lib
            ./autogen.sh;
            ./configure --enable-aesccm --enable-aessiv --enable-cmac;
            make;
