--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -97,9 +97,7 @@ jobs:
     - name: Build WolfSSL
       #  -DCMAKE_INSTALL_PREFIX=/home/runner/.local
       run: cd /tmp/wolfssl/;
-           sudo mkdir -p /usr/local/share/doc/wolfssl;
-           sudo chown -R runner /usr/local/share/doc/wolfssl;
-           sudo chown -R runner /usr/local/lib;
+           sudo chown -R runner /usr/local; 
            ./autogen.sh;
            ./configure --enable-aesccm --enable-aessiv --enable-cmac;
            make;
