--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,16 +96,16 @@ jobs:
      #      cmake -DCMAKE_INSTALL_PREFIX=/home/runner/.local -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
     - name: Build WolfSSL
       #  -DCMAKE_INSTALL_PREFIX=/home/runner/.local
-      run: cd /tmp/wolfssl/;
-           sudo chown -R runner /usr/local; 
-           ./autogen.sh;
-           ./configure --enable-aesccm --enable-aessiv --enable-cmac;
-           make;
-           make install;
-    #  run: mkdir /tmp/wolfssl/build;
-    #       cd /tmp/wolfssl/build;
-    #       cmake -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
-    #       cmake --build .;
+      #run: cd /tmp/wolfssl/;
+      #     sudo chown -R runner /usr/local; 
+      #     ./autogen.sh;
+      #     ./configure --enable-aesccm --enable-aessiv --enable-cmac;
+      #     make;
+      #     make install;
+      run: mkdir /tmp/wolfssl/build;
+           cd /tmp/wolfssl/build;
+           cmake -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
+           cmake --build .;
     # End Container Setup
     
     - name: Wolf Build Script
