--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,11 +102,12 @@ jobs:
       #     ./configure --enable-aesccm --enable-aessiv --enable-cmac;
       #     make;
       #     make install;
-      run: mkdir /tmp/wolfssl/build;
+      run: sudo chown -R runner /usr/local;
+           mkdir /tmp/wolfssl/build;
            cd /tmp/wolfssl/build;
            cmake -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
            cmake --build .;
-           sudo make install;
+           make install;
     # End Container Setup
     
     - name: Wolf Build Script
