[nasa/cryptolib#144] WolfSSL Crypto Module (#200)
* [nasa/cryptolib#144] Create initial clone of libgcrypt crypto module for WolfSSL;

* [nasa/cryptolib#144] Created new scripts for build_wolf, update how SCRIPT_DIR is determined, and move to use env.sh setup;

* [nasa/cryptolib#144] Rough draft of wolfssl crypto module - not yet building;

* [nasa/cryptolib#144] Wolf crypto module building, no unit tests yet;

* [nasa/cryptolib#144] Updates to script comments, added LD_LIBRARY_PATH to container, and created docker_debug.sh;

* [nasa/cryptolib#144] Updates to crypto_config.c to autodetermine crypto module in use and added CMAC and SIV build flags to WolfSSL docker build;

* [nasa/cryptolib#144] Update wolfssl module to not use global Aes, but local in each function. Additionally commented out unit tests that were specfic to gcrypt for later refactoring;

* [nasa/cryptolib#144] Unit tests all running;

* [nasa/cryptolib#144] First attempt at CI for wolf build;

* [nasa/cryptolib#144] CI for wolf build - round 2;

* [nasa/cryptolib#144] CI for wolf build - round 3, omitting the make install command;

* [nasa/cryptolib#144] CI for wolf build - set LD_LIBRARY_PATH to wolfssl build directory;

* [nasa/cryptolib#144] CI for wolf build - added to $GITHUB_PATH environmental variable;

* [nasa/cryptolib#144] Added executable bit to scripts and updated Wolf CI to try to use /home/runner/.local path for install;

* Update build.yml - Test WolfSSL Container

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.yml

* Update build.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Update
       run: sudo apt-get update
     - name: Install Dependencies
-      run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3
+      run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3 
     - name: Install Python Libraries
       run: sudo pip install pycryptodome
     # End Container Setup
@@ -75,3 +75,42 @@ jobs:
     - name: KMC Build Script
       working-directory: ${{github.workspace}}
       run: bash ${GITHUB_WORKSPACE}/support/scripts/build_kmc.sh
+
+  #
+  # Wolf Build
+  #
+  wolf_build:
+    # Container Setup
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Update
+      run: sudo apt-get update
+    - name: Install Dependencies
+      run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3 autoconf libtool
+    - name: Install Python Libraries
+      run: sudo pip install pycryptodome
+    - name: Clone WolfSSL
+      run: git clone --depth 1 --branch v5.6.0-stable https://github.com/wolfSSL/wolfssl.git /tmp/wolfssl
+   
+     #      cmake -DCMAKE_INSTALL_PREFIX=/home/runner/.local -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
+    - name: Build WolfSSL
+      #  -DCMAKE_INSTALL_PREFIX=/home/runner/.local
+      #run: cd /tmp/wolfssl/;
+      #     sudo chown -R runner /usr/local; 
+      #     ./autogen.sh;
+      #     ./configure --enable-aesccm --enable-aessiv --enable-cmac;
+      #     make;
+      #     make install;
+      #sudo chown -R runner /usr/local;
+      run: mkdir /tmp/wolfssl/build;
+           cd /tmp/wolfssl/build;
+           cmake -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
+           cmake --build .;
+           sudo make install;
+           sudo ldconfig;
+    # End Container Setup
+    
+    - name: Wolf Build Script
+      working-directory: ${{github.workspace}}
+      run: bash ${GITHUB_WORKSPACE}/support/scripts/build_wolf.sh
