--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,9 +41,9 @@ add_test(NAME UT_AOS_APPLY
          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_aos_apply
          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
-# add_test(NAME UT_AOS_PROCESS
-#          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_aos_process
-#          WORKING_DIRECTORY ${PROJECT_TEST_DIR})
+add_test(NAME UT_AOS_PROCESS
+         COMMAND ${PROJECT_BINARY_DIR}/bin/ut_aos_process
+         WORKING_DIRECTORY ${PROJECT_TEST_DIR})
 
 add_test(NAME UT_CRYPTO_MC
          COMMAND ${PROJECT_BINARY_DIR}/bin/ut_crypto_mc 
