--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: CryptoLib
 
 on: 
   push:
-    branches: [ main, dev ]
+    branches: [ main, dev, update-code-coverage ]
   pull_request:
-    branches: [ main, dev ]
+    branches: [ main, dev, update-code-coverage ]
 
 jobs:
   #
@@ -52,7 +52,9 @@ jobs:
       run: make gcov
 
     - name: Upload 
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
       with:
         files: 'coverage/*.c.gcov'
 
