[nasa/cryptolib#216] Initial draft of MC_DISABLED;

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -77,6 +77,14 @@ else()
     list(APPEND LIB_SRC_FILES ${MC_CUSTOM_FILES})
 endif()
 
+if(MC_DISABLED)
+    aux_source_directory(mc/disabled MC_DISABLED_FILES)
+    list(APPEND LIB_SRC_FILES ${MC_DISABLED_FILES})
+else()
+    aux_source_directory(mc/disabled_stub MC_DISABLED_FILES)
+    list(APPEND LIB_SRC_FILES ${MC_DISABLED_FILES})
+endif()
+
 if(MC_INTERNAL)
     aux_source_directory(mc/internal MC_INTERNAL_FILES)
     list(APPEND LIB_SRC_FILES ${MC_INTERNAL_FILES})
