--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: CryptoLib
 
 on: 
   push:
-    branches: [ main, dev ]
+    branches: [ main, dev, 206-ci-for-rhel-based-latest ]
   pull_request:
     branches: [ main, dev ]
 
@@ -10,109 +10,131 @@ jobs:
   #
   # Minimal Build
   #
-  minimal_build:
-    # Container Setup
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Update
-      run: sudo apt-get update
-    - name: Install Dependencies
-      run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3 
-    - name: Install Python Libraries
-      run: sudo pip install pycryptodome
-    # End Container Setup
+  # minimal_build:
+  #   # Container Setup
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Update
+  #     run: sudo apt-get update
+  #   - name: Install Dependencies
+  #     run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3 
+  #   - name: Install Python Libraries
+  #     run: sudo pip install pycryptodome
+  #   # End Container Setup
     
-    - name: Minimal Build Script
-      working-directory: ${{github.workspace}}
-      run: bash ${GITHUB_WORKSPACE}/support/scripts/build_minimal.sh
+  #   - name: Minimal Build Script
+  #     working-directory: ${{github.workspace}}
+  #     run: bash ${GITHUB_WORKSPACE}/support/scripts/build_minimal.sh
 
-  #
-  # Internal Build
-  #
-  internal_build:
-    # Container Setup
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Update
-      run: sudo apt-get update
-    - name: Install Dependencies
-      run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3
-    - name: Install Python Libraries
-      run: sudo pip install pycryptodome
-    # End Container Setup
+  # #
+  # # Internal Build
+  # #
+  # internal_build:
+  #   # Container Setup
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Update
+  #     run: sudo apt-get update
+  #   - name: Install Dependencies
+  #     run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3
+  #   - name: Install Python Libraries
+  #     run: sudo pip install pycryptodome
+  #   # End Container Setup
     
-    - name: Internal Build Script
-      working-directory: ${{github.workspace}}
-      run: bash ${GITHUB_WORKSPACE}/support/scripts/build_internal.sh
+  #   - name: Internal Build Script
+  #     working-directory: ${{github.workspace}}
+  #     run: bash ${GITHUB_WORKSPACE}/support/scripts/build_internal.sh
 
-    - name: Code-Coverage
-      working-directory: ${{github.workspace}}
-      run: make gcov
+  #   - name: Code-Coverage
+  #     working-directory: ${{github.workspace}}
+  #     run: make gcov
 
-    - name: Upload 
-      uses: codecov/codecov-action@v3
-      env:
-        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
-      with:
-        files: 'coverage/*.c.gcov'
+  #   - name: Upload 
+  #     uses: codecov/codecov-action@v3
+  #     env:
+  #       CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+  #     with:
+  #       files: 'coverage/*.c.gcov'
 
-  #
-  # KMC Build
-  #
-  kmc_build:
-    # Container Setup
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Update
-      run: sudo apt-get update
-    - name: Install Dependencies
-      run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3
-    - name: Install Python Libraries
-      run: sudo pip install pycryptodome
-    # End Container Setup
+  # #
+  # # KMC Build
+  # #
+  # kmc_build:
+  #   # Container Setup
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Update
+  #     run: sudo apt-get update
+  #   - name: Install Dependencies
+  #     run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3
+  #   - name: Install Python Libraries
+  #     run: sudo pip install pycryptodome
+  #   # End Container Setup
     
-    - name: KMC Build Script
-      working-directory: ${{github.workspace}}
-      run: bash ${GITHUB_WORKSPACE}/support/scripts/build_kmc.sh
+  #   - name: KMC Build Script
+  #     working-directory: ${{github.workspace}}
+  #     run: bash ${GITHUB_WORKSPACE}/support/scripts/build_kmc.sh
 
-  #
-  # Wolf Build
-  #
-  wolf_build:
-    # Container Setup
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Update
-      run: sudo apt-get update
-    - name: Install Dependencies
-      run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3 autoconf libtool
-    - name: Install Python Libraries
-      run: sudo pip install pycryptodome
-    - name: Clone WolfSSL
-      run: git clone --depth 1 --branch v5.6.0-stable https://github.com/wolfSSL/wolfssl.git /tmp/wolfssl
+  # #
+  # # Wolf Build
+  # #
+  # wolf_build:
+  #   # Container Setup
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Update
+  #     run: sudo apt-get update
+  #   - name: Install Dependencies
+  #     run: sudo apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat libgcrypt20-dev python3 autoconf libtool
+  #   - name: Install Python Libraries
+  #     run: sudo pip install pycryptodome
+  #   - name: Clone WolfSSL
+  #     run: git clone --depth 1 --branch v5.6.0-stable https://github.com/wolfSSL/wolfssl.git /tmp/wolfssl
    
-     #      cmake -DCMAKE_INSTALL_PREFIX=/home/runner/.local -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
-    - name: Build WolfSSL
-      #  -DCMAKE_INSTALL_PREFIX=/home/runner/.local
-      #run: cd /tmp/wolfssl/;
-      #     sudo chown -R runner /usr/local; 
-      #     ./autogen.sh;
-      #     ./configure --enable-aesccm --enable-aessiv --enable-cmac;
-      #     make;
-      #     make install;
-      #sudo chown -R runner /usr/local;
-      run: mkdir /tmp/wolfssl/build;
-           cd /tmp/wolfssl/build;
-           cmake -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
-           cmake --build .;
-           sudo make install;
-           sudo ldconfig;
-    # End Container Setup
+  #    #      cmake -DCMAKE_INSTALL_PREFIX=/home/runner/.local -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
+  #   - name: Build WolfSSL
+  #     #  -DCMAKE_INSTALL_PREFIX=/home/runner/.local
+  #     #run: cd /tmp/wolfssl/;
+  #     #     sudo chown -R runner /usr/local; 
+  #     #     ./autogen.sh;
+  #     #     ./configure --enable-aesccm --enable-aessiv --enable-cmac;
+  #     #     make;
+  #     #     make install;
+  #     #sudo chown -R runner /usr/local;
+  #     run: mkdir /tmp/wolfssl/build;
+  #          cd /tmp/wolfssl/build;
+  #          cmake -DWOLFSSL_AESCCM=yes -DWOLFSSL_AESSIV=yes -DWOLFSSL_CMAC=yes ..;
+  #          cmake --build .;
+  #          sudo make install;
+  #          sudo ldconfig;
+  #   # End Container Setup
     
-    - name: Wolf Build Script
+  #   - name: Wolf Build Script
+  #     working-directory: ${{github.workspace}}
+  #     run: bash ${GITHUB_WORKSPACE}/support/scripts/build_wolf.sh
+  #
+  # RHEL Build
+  #
+  rhel_build:
+    runs-on: ubuntu-latest
+    container:
+      image: rockylinux/rockylinux:8
+  steps:
+    # Container Setup
+    - uses: actions/checkout@v2
+    - name: Update
+      run: sudo yum update
+    - name: Install Dependencies
+      run: sudo yum install -y python38-devel libcurl-devel libgpg-error-devel libgcrypt-devel git cmake gcc java-11-openjdk-devel openssl wget mariadb-devel mariadb-common mariadb-connector-c mariadb-connector-c-config mariadb-errmsg mariadb-gssapi-server 
+      # Might want to trim this down, but these dependencies should work for KMC
+    - name: Install Python Dependencies
+      run: sudo pip3 install pycryptodome
+    # End Container Setup
+
+    - name: RHEL Build Script
       working-directory: ${{github.workspace}}
-      run: bash ${GITHUB_WORKSPACE}/support/scripts/build_wolf.sh
+      run: bash ${GITHUB_WORKSPACE}/support/scripts/build_rhel.sh
