--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,29 +67,33 @@ OPTION(KMC_CFFI_EXCLUDE "KMC-Exclude-Problematic-CFFI-Code" OFF) #Disabled by de
 # Custom Module Paths
 #
 if(KEY_CUSTOM)
-    if(NOT DEFINED ${KEY_CUSTOM_PATH})
+    if(NOT DEFINED KEY_CUSTOM_PATH)
         set(KEY_CUSTOM_PATH ${KEY_CUSTOM_PATH_DEFAULT})
+        message(STATUS "Default path set for KEY_CUSTOM_PATH")
     endif()
     message(STATUS "KEY_CUSTOM being utilized.  Path set to: ${KEY_CUSTOM_PATH}")
 endif()
 
 if(MC_CUSTOM)
-    if(NOT DEFINED ${KEY_CUSTOM_PATH})
+    if(NOT DEFINED MC_CUSTOM_PATH)
         set(MC_CUSTOM_PATH ${MC_CUSTOM_PATH_DEFAULT})
+        message(STATUS "Default path set for MC_CUSTOM_PATH")
     endif()
     message(STATUS "MC_CUSTOM being utilized.  Path set to: ${MC_CUSTOM_PATH}")
 endif()
 
 if(SA_CUSTOM)
-    if(NOT DEFINED ${SA_CUSTOM_PATH})
+    if(NOT DEFINED SA_CUSTOM_PATH)
         set(SA_CUSTOM_PATH ${SA_CUSTOM_PATH_DEFAULT})
+        message(STATUS "Default path set for SA_CUSTOM_PATH")
     endif()
     message(STATUS "SA_CUSTOM being utilized.  Path set to: ${SA_CUSTOM_PATH}")
 endif()
 
 if(CRYPTO_CUSTOM)
-    if(NOT DEFINED ${CRYPTO_CUSTOM_PATH})
+    if(NOT DEFINED CRYPTO_CUSTOM_PATH)
         set(CRYPTO_CUSTOM_PATH ${CRYPTO_CUSTOM_PATH_DEFAULT})
+        message(STATUS "Default path set for CRYPTO_CUSTOM_PATH")
     endif()
     message(STATUS "CRYPTO_CUSTOM being utilized.  Path set to: ${CRYPTO_CUSTOM_PATH}")
 endif()
