[nasa/cryptolib#215] Testing code coverage + uploads to all builds

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: CryptoLib
 
 on: 
   push:
-    branches: [ main, dev ]
+    branches: [ main, dev, 215-re-evaluate-codecov-app-being-used-in-ci ]
   pull_request:
     branches: [ main, dev ]
 
@@ -26,6 +26,17 @@ jobs:
     - name: Minimal Build Script
       working-directory: ${{github.workspace}}
       run: bash ${GITHUB_WORKSPACE}/support/scripts/build_minimal.sh
+
+    - name: Code-Coverage
+      working-directory: ${{github.workspace}}
+      run: make gcov
+
+    - name: Upload 
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+      with:
+        files: 'coverage/*.c.gcov'
 
   #
   # Internal Build
@@ -77,6 +88,17 @@ jobs:
     - name: KMC Build Script
       working-directory: ${{github.workspace}}
       run: bash ${GITHUB_WORKSPACE}/support/scripts/build_kmc.sh
+    
+    - name: Code-Coverage
+      working-directory: ${{github.workspace}}
+      run: make gcov
+
+    - name: Upload 
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+      with:
+        files: 'coverage/*.c.gcov'
 
   #
   # Wolf Build
@@ -116,6 +138,17 @@ jobs:
     - name: Wolf Build Script
       working-directory: ${{github.workspace}}
       run: bash ${GITHUB_WORKSPACE}/support/scripts/build_wolf.sh
+    
+    - name: Code-Coverage
+      working-directory: ${{github.workspace}}
+      run: make gcov
+
+    - name: Upload 
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+      with:
+        files: 'coverage/*.c.gcov'
       
   #
   # RHEL Build
@@ -130,7 +163,7 @@ jobs:
     - name: Update
       run: yum update -y
     - name: Install Dependencies
-      run: yum install -y python38-devel libcurl-devel libgpg-error-devel libgcrypt-devel git cmake gcc java-11-openjdk-devel openssl wget mariadb-devel mariadb-common mariadb-connector-c mariadb-connector-c-config mariadb-errmsg mariadb-gssapi-server 
+      run: yum install -y lcov python38-devel libcurl-devel libgpg-error-devel libgcrypt-devel git cmake gcc java-11-openjdk-devel openssl wget mariadb-devel mariadb-common mariadb-connector-c mariadb-connector-c-config mariadb-errmsg mariadb-gssapi-server 
       # Might want to trim this down, but these dependencies should work for KMC
     - name: Install Python Dependencies
       run: pip3 install pycryptodome
@@ -139,3 +172,14 @@ jobs:
     - name: RHEL Build Script
       working-directory: ${{github.workspace}}
       run: bash ${GITHUB_WORKSPACE}/support/scripts/build_rhel.sh
+    
+    - name: Code-Coverage
+      working-directory: ${{github.workspace}}
+      run: make gcov
+
+    - name: Upload 
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: 71699f25-12a3-44a4-8a83-be777b9e577a
+      with:
+        files: 'coverage/*.c.gcov'
