--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,21 +22,22 @@ jobs:
     - name: Install Python Libraries
       run: sudo pip install pycryptodome
     - name: Install Libgcrypt
-      run: |
-        curl \ 
-        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 \
-        -o /tmp/libgpg-error-1.50.tar.bz2 \
-        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgpg-error-1.50 \
-        && ./configure \
-        && make install \
-        && curl \ 
-        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 \
-        -o /tmp/libgcrypt-1.11.0.tar.bz2 \
-        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgcrypt-1.11.0 \
-        && ./configure \
-        && make install
+      run: >
+        curl  
+        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 
+        -o /tmp/libgpg-error-1.50.tar.bz2 
+        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ 
+        && cd /tmp/libgpg-error-1.50 
+        && sudo ./configure 
+        && sudo make install 
+        && curl  
+        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 
+        -o /tmp/libgcrypt-1.11.0.tar.bz2 
+        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ 
+        && cd /tmp/libgcrypt-1.11.0 
+        && sudo ./configure 
+        && sudo make install
+        && sudo ldconfig
     # End Container Setup
     
     - name: Minimal Build Script
@@ -58,21 +59,22 @@ jobs:
     - name: Install Python Libraries
       run: sudo pip install pycryptodome
     - name: Install Libgcrypt
-      run: |
-        curl \ 
-        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 \
-        -o /tmp/libgpg-error-1.50.tar.bz2 \
-        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgpg-error-1.50 \
-        && ./configure \
-        && make install \
-        && curl \ 
-        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 \
-        -o /tmp/libgcrypt-1.11.0.tar.bz2 \
-        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgcrypt-1.11.0 \
-        && ./configure \
-        && make install
+      run: >
+        curl  
+        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 
+        -o /tmp/libgpg-error-1.50.tar.bz2 
+        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ 
+        && cd /tmp/libgpg-error-1.50 
+        && sudo ./configure 
+        && sudo make install 
+        && curl  
+        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 
+        -o /tmp/libgcrypt-1.11.0.tar.bz2 
+        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ 
+        && cd /tmp/libgcrypt-1.11.0 
+        && sudo ./configure 
+        && sudo make install
+        && sudo ldconfig
     # End Container Setup
     
     - name: Internal Build Script
@@ -106,21 +108,22 @@ jobs:
     - name: Install Python Libraries
       run: sudo pip install pycryptodome
     - name: Install Libgcrypt
-      run: |
-        curl \ 
-        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 \
-        -o /tmp/libgpg-error-1.50.tar.bz2 \
-        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgpg-error-1.50 \
-        && ./configure \
-        && make install \
-        && curl \ 
-        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 \
-        -o /tmp/libgcrypt-1.11.0.tar.bz2 \
-        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgcrypt-1.11.0 \
-        && ./configure \
-        && make install
+      run: >
+        curl  
+        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 
+        -o /tmp/libgpg-error-1.50.tar.bz2 
+        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ 
+        && cd /tmp/libgpg-error-1.50 
+        && sudo ./configure 
+        && sudo make install 
+        && curl  
+        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 
+        -o /tmp/libgcrypt-1.11.0.tar.bz2 
+        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ 
+        && cd /tmp/libgcrypt-1.11.0 
+        && sudo ./configure 
+        && sudo make install
+        && sudo ldconfig
     # End Container Setup
     
     - name: KMC Build Script
@@ -154,21 +157,22 @@ jobs:
     - name: Install Python Libraries
       run: sudo pip install pycryptodome
     - name: Install Libgcrypt
-      run: |
-        curl \ 
-        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 \
-        -o /tmp/libgpg-error-1.50.tar.bz2 \
-        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgpg-error-1.50 \
-        && ./configure \
-        && make install \
-        && curl \ 
-        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 \
-        -o /tmp/libgcrypt-1.11.0.tar.bz2 \
-        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgcrypt-1.11.0 \
-        && ./configure \
-        && make install
+      run: >
+        curl  
+        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 
+        -o /tmp/libgpg-error-1.50.tar.bz2 
+        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ 
+        && cd /tmp/libgpg-error-1.50 
+        && sudo ./configure 
+        && sudo make install 
+        && curl  
+        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 
+        -o /tmp/libgcrypt-1.11.0.tar.bz2 
+        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ 
+        && cd /tmp/libgcrypt-1.11.0 
+        && sudo ./configure 
+        && sudo make install
+        && sudo ldconfig
     - name: Clone WolfSSL
       run: git clone --depth 1 --branch v5.6.0-stable https://github.com/wolfSSL/wolfssl.git /tmp/wolfssl
    
@@ -178,7 +182,7 @@ jobs:
       #run: cd /tmp/wolfssl/;
       #     sudo chown -R runner /usr/local; 
       #     ./autogen.sh;
-      #     ./configure --enable-aesccm --enable-aessiv --enable-cmac;
+      #     sudo ./configure --enable-aesccm --enable-aessiv --enable-cmac;
       #     make;
       #     make install;
       #sudo chown -R runner /usr/local;
@@ -219,33 +223,36 @@ jobs:
     - name: Update
       run: yum update -y
     - name: Install Dependencies
-      run: yum install -y epel-release python38-devel libcurl-devel libgpg-error-devel git cmake gcc java-11-openjdk-devel openssl wget mariadb-devel mariadb-common mariadb-connector-c mariadb-connector-c-config mariadb-errmsg mariadb-gssapi-server
+      run: yum install -y epel-release python38-devel libcurl-devel git cmake gcc java-11-openjdk-devel openssl wget bzip2 ldconfig mariadb-devel mariadb-common mariadb-connector-c mariadb-connector-c-config mariadb-errmsg mariadb-gssapi-server
       # Might want to trim this down, but these dependencies should work for KMC
     - name: install lcov
       run: yum install -y --enablerepo=epel lcov
     - name: Install Python Dependencies
       run: pip3 install pycryptodome
     - name: Install Libgcrypt
-      run: |
-        curl \ 
-        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 \
-        -o /tmp/libgpg-error-1.50.tar.bz2 \
-        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgpg-error-1.50 \
-        && ./configure \
-        && make install \
-        && curl \ 
-        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 \
-        -o /tmp/libgcrypt-1.11.0.tar.bz2 \
-        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ \
-        && cd /tmp/libgcrypt-1.11.0 \
-        && ./configure \
-        && make install
+      run: >
+        curl 
+        -LS https://www.gnupg.org/ftp/gcrypt/libgpg-error/libgpg-error-1.50.tar.bz2 
+        -o /tmp/libgpg-error-1.50.tar.bz2 
+        && tar -xjf /tmp/libgpg-error-1.50.tar.bz2 -C /tmp/ 
+        && cd /tmp/libgpg-error-1.50 
+        && ./configure 
+        && make install 
+        && curl  
+        -LS https://www.gnupg.org/ftp/gcrypt/libgcrypt/libgcrypt-1.11.0.tar.bz2 
+        -o /tmp/libgcrypt-1.11.0.tar.bz2 
+        && tar -xjf /tmp/libgcrypt-1.11.0.tar.bz2 -C /tmp/ 
+        && cd /tmp/libgcrypt-1.11.0 
+        && ./configure 
+        && make install  
+        && echo "export LD_LIBRARY_PATH=/usr/local/lib/:/usr/local/include:$LD_LIBRARY_PATH" >> ~/.bashrc 
+        && source ~/.bashrc 
+        && ldconfig
     # End Container Setup
 
     - name: RHEL Build Script
       working-directory: ${{github.workspace}}
-      run: bash ${GITHUB_WORKSPACE}/support/scripts/build_rhel.sh
+      run: source ~/.bashrc && ${GITHUB_WORKSPACE}/support/scripts/build_rhel.sh
     
     - name: Code-Coverage
       working-directory: ${{github.workspace}}
