--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -158,6 +158,10 @@ endif()
 
 file(GLOB CRYPTO_INCLUDES ../include/*.h)
 set_target_properties(crypto PROPERTIES PUBLIC_HEADER "${CRYPTO_INCLUDES}")
+# This causes the library to be installed as libcryptolib.so while still being
+# referred to as crypto from CMake. Without this, the library filename would be
+# libcrypto.so which would conflict with openssl
+set_target_properties(crypto PROPERTIES OUTPUT_NAME "cryptolib")
 
 add_custom_command(TARGET crypto POST_BUILD
         COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:crypto> ${PROJECT_BINARY_DIR}/lib/libcrypto.so
