--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ option(MC_CUSTOM_PATH "Custom Monitoring and Control path" OFF)
 option(MC_DISABLED "Monitoring and Control - Disabled" OFF)
 option(MC_INTERNAL "Monitoring and Control - Internal" ON)
 option(SA_CUSTOM "Security Association - Custom" OFF)
-option(SA_CUSTOM_PATH "Custion Security Association Path" OFF)
+option(SA_CUSTOM_PATH "Custom Security Association Path" OFF)
 option(SA_INTERNAL "Security Association - Internal" ON)
 option(SA_MARIADB "Security Association - MariaDB" OFF)
 option(SUPPORT "Support" OFF)
